--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 </style>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<a href="https://github.com/SingingFoot/ptakh/blob/04599b4361230fe5aa6812072694ff7e1eddf83b/index.html#L7" target="_blank" rel="noopener">github.com</a>
 
 
 </head>
